--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 td {
-    padding-left: 5px;
+    align-content: center;
 }
 #header {
     height: 100px;
     background-color: #00fff7;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 #header #Name {
     text-align: left;
     font-size: 20px;
+    padding-left: 20px;
 }
